feat(pages/GamePlay): move red units

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -4,5 +4,6 @@
         "height": 10
     },
     "defaultHP": 15,
-    "defaultMoney": 10
+    "defaultMoney": 10,
+    "defaultUnits": ["infantry", "scout", "sniper"]
 }
