--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -3,7 +3,11 @@
         "width": 8,
         "height": 10
     },
+    "buildingBoard": {
+        "width": 6,
+        "height": 2
+    },
     "defaultHP": 15,
-    "defaultMoney": 10,
+    "defaultMoney": 100000,
     "defaultUnits": ["infantry", "scout", "sniper"]
 }
