--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -7,6 +7,7 @@
         "width": 6,
         "height": 2
     },
+    "moneyByTurn": 2,
     "defaultHP": 15,
     "defaultMoney": 10,
     "defaultUnits": ["infantry", "scout", "sniper"],
