--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -9,7 +9,7 @@
     },
     "moneyByTurn": 2,
     "defaultHP": 15,
-    "defaultMoney": 12,
+    "defaultMoney": 22,
     "defaultUnits": ["infantry", "scout", "sniper"],
     "defaultEvents": [
         "anxiety",
@@ -22,33 +22,33 @@
     "enemyTiming": [
         [],
         [],
-        ["scout"],
+        [],
         ["scout"],
         [],
         ["scout"],
         ["infantry"],
         ["scout"],
-        ["infantry"],
+        [],
         ["scout"],
         ["infantry"],
         [],
         ["infantry", "infantry"],
         ["sniper"],
         ["infantry"],
-        ["infantry"],
+        [],
         ["sniper", "infantry"],
         ["tank"],
         ["infantry"],
         ["infantry", "sniper", "scout"],
         ["infantry", "tank"],
-        ["infantry"],
-        ["tank", "bomber"],
+        [],
+        ["bomber"],
         ["tank"],
         ["tank"],
         ["scout", "bomber"],
         ["bomber", "bomber"],
+        ["tank"],
         ["tank", "bomber"],
-        ["tank", "bomber"],
-        ["bomber", "bomber", "bomber"]
+        ["bomber", "bomber"]
     ]
 }
