--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -37,18 +37,29 @@
         ["infantry"],
         [],
         ["sniper", "infantry"],
-        ["tank"],
-        ["infantry"],
-        ["infantry", "sniper", "scout"],
-        ["infantry", "tank"],
         [],
-        ["bomber"],
+        ["infantry"],
+        ["sniper"],
+        ["tank"],
+        [],
+        [],
         ["tank"],
         ["tank"],
-        ["scout", "bomber"],
+        ["scout"],
         ["bomber", "bomber"],
         ["tank"],
-        ["tank", "bomber"],
-        ["bomber", "bomber"]
+        ["tank"],
+        ["bomber"],
+        ["tank"],
+        [],
+        [],
+        ["tank"],
+        ["tank"],
+        ["bomber"],
+        ["sniper"],
+        ["scout"],
+        ["tank"],
+        ["tank"],
+        ["bomber"]
     ]
 }
