--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -9,7 +9,7 @@
     },
     "moneyByTurn": 2,
     "defaultHP": 15,
-    "defaultMoney": 22,
+    "defaultMoney": 17,
     "defaultUnits": ["infantry", "scout", "sniper"],
     "defaultEvents": [
         "anxiety",
@@ -28,10 +28,10 @@
         ["scout"],
         ["infantry"],
         ["scout"],
-        [],
+        ["infantry"],
         ["scout"],
         ["infantry"],
-        [],
+        ["infantry"],
         ["infantry", "infantry"],
         ["sniper"],
         ["infantry"],
@@ -46,16 +46,16 @@
         ["tank"],
         ["tank"],
         ["scout"],
-        ["bomber", "bomber"],
-        ["tank"],
-        ["tank"],
         ["bomber"],
+        ["tank"],
+        ["tank"],
+        [],
         ["tank"],
         [],
         [],
         ["tank"],
         ["tank"],
-        ["bomber"],
+        [],
         ["sniper"],
         ["scout"],
         ["tank"],
